--- a/Sources/SwiftVisualizer/public/index.html
+++ b/Sources/SwiftVisualizer/public/index.html
@@ -6,6 +6,25 @@
 </head>
 <body>
     <main>
+        <div class="toolbar">
+            <select class="filter-selector">
+                <option value=''>All Types</option>
+                <option value='["class"]'>Class</option>
+                <option value='["struct"]'>Struct</option>
+                <option value='["enum"]'>Enum</option>
+                <option value='["protocol"]'>Protocol</option>
+                <option value='["class", "protocol"]'>Class + Protocol</option>
+                <option value='["enum", "protocol"]'>Enum + Protocol</option>
+            </select>
+        </div>
+        <div id="tooltip" class="hidden">
+            <div class="section">
+                <div class="section-title"></div>
+                <div id="declaration">
+                    <div class="code"></div>
+                </div>
+            </div>
+        </div>
         <svg>
             <g id="links"></g>
             <g id="nodes"></g>
