Update metadata tooltip

--- a/Sources/SwiftVisualizer/public/index.html
+++ b/Sources/SwiftVisualizer/public/index.html
@@ -8,21 +8,22 @@
     <main>
         <div class="toolbar">
             <select class="filter-selector">
-                <option value=''>All Types</option>
-                <option value='["class"]'>Class</option>
-                <option value='["struct"]'>Struct</option>
-                <option value='["enum"]'>Enum</option>
-                <option value='["protocol"]'>Protocol</option>
-                <option value='["class", "protocol"]'>Class + Protocol</option>
-                <option value='["enum", "protocol"]'>Enum + Protocol</option>
+              <option value=''>All Types</option>
+              <option value='["class"]'>Class</option>
+              <option value='["struct"]'>Struct</option>
+              <option value='["enum"]'>Enum</option>
+              <option value='["protocol"]'>Protocol</option>
+              <option value='["class", "protocol"]'>Class + Protocol</option>
+              <option value='["enum", "protocol"]'>Enum + Protocol</option>
             </select>
-        </div>
+          </div>
         <div id="tooltip" class="hidden">
             <div class="section">
-                <div class="section-title"></div>
-                <div id="declaration">
-                    <div class="code"></div>
-                </div>
+              <div class="section-title"></div>
+              <div id="declaration">
+                <pre class="code"></pre>
+              </div>
+              <div class="location"></div>
             </div>
         </div>
         <svg>
